tween form/to can use float numbers + asset list comp overflow fix

--- a/style.css
+++ b/style.css
@@ -95,4 +95,7 @@ a.scene-asset-selected {
     border: 1px solid #777;
 }
 
-.assets { grid-area: assets; }
+.assets {
+    grid-area: assets;
+    overflow: auto;
+}
